--- a/src/main/resources/templates/actors-list.html
+++ b/src/main/resources/templates/actors-list.html
@@ -5,15 +5,75 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Herci</title>
 </head>
 <body>
     <div th:replace="~{fragments/nav.html :: header}"></div>
     <main class="container my-2">
         <div>
-            <a href="/actor/new" sec:authorize="hasAnyAuthority('ADMIN')" class="btn my-1">Přidat herce</a>
+            <div>
+                <div sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')" class="d-flex flex-row">
+                    <a href="/actor/new" class="btn me-2">Přidat herce</a>
+                    <div>
+                        <a th:href="@{/actor/export/excel}" class="btn"><span class="material-symbols-outlined">download</span></a>
+                    </div>
+                </div>
+                <div class="accordion my-3" id="accordion">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button text-light border-0" id="accordion-header" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                Filtrování
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseOne" class="py-2 accordion-collapse collapse">
+                            <form action="/actor" method="GET">
+                                <div class="accordion-body">
+                                    <div>
+                                        <label for="name" class="form-label">Jméno Herce</label>
+                                        <input th:text="${param.name}" type="text" name="name" id="name" class="form-control">
+                                    </div>
+                                    <div>
+                                        <label for="surname" class="form-label">Přijmení Herce</label>
+                                        <input th:text="${param.surname}" type="text" name="surname" id="surname" class="form-control">
+                                    </div>
+                                    <div>
+                                        <p class="text-light">Datum narození</p>
+                                        <div class="row">
+                                            <div class="col">
+                                                <label for="start">Od</label>
+                                                <input class="form-control" type="date" name="startDate" id="start">
+                                            </div>
+                                            <div class="col">
+                                                <label for="end">Do</label>
+                                                <input class="form-control" type="date" name="endDate" id="end">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <label for="countries">Země</label>
+                                        <select class="form-control" id="countries" name="countries" multiple>
+                                            <option th:each="country : ${countries}" th:text="${country.code}" th:value="${country.id}"></option>
+                                        </select>
+                                    </div>
+                                    <div>
+                                        <label for="movies">Filmy</label>
+                                        <select name="movies" id="movies" multiple class="form-control">
+                                            <option th:value="${movie.id}" th:each="movie : ${movies}" th:text="${movie.name}"></option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="text-center">
+                                    <button class="btn" type="submit">Filtrovat</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="content-block row row-cols-3">
                 <div th:each="actor : ${actorsPage.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
+                    <p class="m-2" style="color: #ebeb05" sec:authorize="hasAnyAuthority('ADMIN')" th:text="'ID: ' + ${actor.id}"></p>
                     <img th:src="@{/{path}(path=${actor.imagePath})}" class="card-img-top" alt="herec">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${actor.name} + ' ' + ${actor.surname}"></h5>
