--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -24,7 +24,7 @@
                 <input style="display: none" type="file" name="file" id="upload">
             </form>
         </div>
-        <div class="accordion my-3" id="accordionPanelsStayOpenExample">
+        <div class="accordion my-3" id="accordion">
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button text-light border-0" id="accordion-header" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
@@ -73,19 +73,19 @@
                             <div>
                                 <label for="countries">Země</label>
                                 <select name="countries" id="countries" multiple class="form-control">
-                                    <option th:each="country : ${countries}" th:text="${country.name}" th:value="${country.id}"></option>
+                                    <option th:selected="${countriesParam != null && countriesParam.contains(country) ? true : false}" th:each="country : ${countries}" th:text="${country.name}" th:value="${country.id}"></option>
                                 </select>
                             </div>
                             <div>
                                 <label for="actors">Herci</label>
                                 <select name="actors" id="actors" multiple class="form-control">
-                                    <option th:each="actor : ${actors}" th:text="${actor.name} + ' ' + ${actor.surname}" th:value="${actor.id}"></option>
+                                    <option th:selected="${actorsParam != null && actorsParam.contains(actor) ? true : false}" th:each="actor : ${actors}" th:text="${actor.name} + ' ' + ${actor.surname}" th:value="${actor.id}"></option>
                                 </select>
                             </div>
                             <div>
                                 <label for="directors">Režiséři</label>
                                 <select name="directors" id="directors" multiple class="form-control">
-                                    <option th:each="director : ${directors}" th:text="${director.name} + ' ' + ${director.surname}" th:value="${director.id}"></option>
+                                    <option th:selected="${directorsParam != null && directorsParam.contains(director) ? true : false}" th:each="director : ${directors}" th:text="${director.name} + ' ' + ${director.surname}" th:value="${director.id}"></option>
                                 </select>
                             </div>
                             <div class="text-center">
@@ -103,6 +103,7 @@
                         Žánry:
                         <span th:each="genre : ${movie.getGenres()}" th:text="${genre.name}" class="badge mx-1"></span>
                     </div>
+                    <p style="color: #ebeb05" class="mx-2" sec:authorize="hasAnyAuthority('ADMIN')" th:text="'ID: ' + ${movie.id}"></p>
                     <img th:src="@{/{path}(path=${movie.imagePath})}" class="card-img-top" alt="film">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${movie.name}"></h5>
