Přidání filtrování a export, import do excelu pro entitu Director

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -40,6 +40,7 @@ label {
     color: white;
     border-radius: 0px;
     transition: 0.5s;
+    color-scheme: dark;
     border-bottom: 3px solid black;
 }
 .form-control:focus {
