--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -56,11 +56,11 @@
                                 <div class="row">
                                     <div class="col">
                                         <label for="minDate">Minimální datum</label>
-                                        <input th:value="${param.minLen}" class="form-control" id="minDate" type="date" name="minDate">
+                                        <input th:value="${param.minDate}" class="form-control" id="minDate" type="date" name="minDate">
                                     </div>
                                     <div class="col">
                                         <label for="maxDate">Maximální datum</label>
-                                        <input th:value="${param.maxLen}" class="form-control" id="maxDate" type="date" name="maxDate">
+                                        <input th:value="${param.maxDate}" class="form-control" id="maxDate" type="date" name="maxDate">
                                     </div>
                                 </div>
                             </div>
