--- a/src/main/resources/templates/director-list.html
+++ b/src/main/resources/templates/director-list.html
@@ -5,14 +5,70 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Režiséři</title>
 </head>
 <body>
 <div th:replace="~{fragments/nav.html :: header}"></div>
 <main class="container my-2">
     <div class="">
-        <a href="/director/new" sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')" class="btn my-1">Přidat režiséra</a>
+        <div>
+            <div class="">
+                <a href="/director/new" sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')" class="btn my-1 me-2">Přidat režiséra</a>
+                <a href="/director/export/excel" class="btn"><span class="material-symbols-outlined">download</span></a>
+            </div>
+            <div class="accordion my-3" id="accordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button text-light border-0" id="accordion-header" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            Filtrování
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="py-2 accordion-collapse collapse">
+                        <form action="/director" method="GET">
+                            <div class="accordion-body">
+                                <div>
+                                    <label for="name" class="form-label">Jméno Režiséra</label>
+                                    <input th:value="${param.name}" type="text" name="name" id="name" class="form-control">
+                                </div>
+                                <div>
+                                    <label for="surname" class="form-label">Přijmení Režiséra</label>
+                                    <input th:value="${param.surname}" type="text" name="surname" id="surname" class="form-control">
+                                </div>
+                                <div>
+                                    <p class="text-light">Datum narození</p>
+                                    <div class="row">
+                                        <div class="col">
+                                            <label for="start">Od</label>
+                                            <input th:value="${param.startDate}" class="form-control" type="date" name="startDate" id="start">
+                                        </div>
+                                        <div class="col">
+                                            <label for="end">Do</label>
+                                            <input th:value="${param.endDate}" class="form-control" type="date" name="endDate" id="end">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <label for="countries">Země</label>
+                                    <select class="form-control" id="countries" name="countries" multiple>
+                                        <option th:selected="${countriesParam != null && countriesParam.contains(country) ? true : false }" th:each="country : ${countries}" th:text="${country.code}" th:value="${country.id}"></option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label for="movies">Filmy</label>
+                                    <select name="movies" id="movies" multiple class="form-control">
+                                        <option th:selected="${moviesParam != null && moviesParam.contains(movie) ? true : false}" th:value="${movie.id}" th:each="movie : ${movies}" th:text="${movie.name}"></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <button class="btn" type="submit">Filtrovat</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="content-block row row-cols-3">
             <div th:each="director : ${directorsPage.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
                 <p sec:authorize="hasAnyAuthority('ADMIN')" class="m-2" style="color: #ebeb05" th:text="'ID: ' + ${director.id}"></p>
