Úprava ukladání obrázků + oprava chyb

--- a/src/main/resources/templates/actors-list.html
+++ b/src/main/resources/templates/actors-list.html
@@ -79,7 +79,7 @@
             <div class="content-block row row-cols-3">
                 <div th:each="actor : ${actorsPage.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
                     <p class="m-2" style="color: #ebeb05" sec:authorize="hasAnyAuthority('ADMIN')" th:text="'ID: ' + ${actor.id}"></p>
-                    <img th:src="@{/{path}(path=${actor.imagePath})}" class="card-img-top" alt="herec">
+                    <img th:src="@{/img/{name}(name=${actor.imagePath})}" class="card-img-top" alt="herec">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${actor.name} + ' ' + ${actor.surname}"></h5>
                         <a class="btn" th:href="@{/actor/{id}(id=${actor.id})}">Zobrazit detail</a>
