--- a/src/main/resources/templates/actor-detail.html
+++ b/src/main/resources/templates/actor-detail.html
@@ -26,7 +26,7 @@
         <div class="card my-3">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img th:src="@{/{path}(path=${actor.imagePath})}" class="img-fluid rounded-start" alt="herec">
+                    <img th:src="@{/img/{name}(name=${actor.imagePath})}" class="img-fluid rounded-start" alt="herec">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
