--- a/src/main/resources/templates/director-detail.html
+++ b/src/main/resources/templates/director-detail.html
@@ -24,7 +24,7 @@
     <div class="card my-3">
         <div class="row g-0">
             <div class="col-md-4">
-                <img th:src="@{/{path}(path=${director.imagePath})}" class="img-fluid rounded-start" alt="herec">
+                <img th:src="@{/img/{name}(name=${director.imagePath})}" class="img-fluid rounded-start" alt="herec">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
