--- a/src/main/resources/templates/movie-detail.html
+++ b/src/main/resources/templates/movie-detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="cs">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/springsecurity" lang="cs">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
@@ -22,7 +22,7 @@
         <div class="page">
             <div class="d-flex flex-row movie-detail">
                 <div class="">
-                    <img class="" th:src="@{/{path}(path=${movie.imagePath})}" alt="film-plakat" >
+                    <img class="" th:src="@{/img/{name}(name=${movie.imagePath})}" alt="film-plakat" >
                 </div>
                 <div class="ms-4">
                     <h1 th:text="${movie.name}"></h1>
@@ -48,6 +48,12 @@
             <h2 class="text-center text-light my-3">Recenze</h2>
             <a sec:authorize="isAuthenticated()" class="btn my-2" th:href="@{/movie/{id}/review(id=${movie.id})}">Přidat recenzi</a>
             <div th:each="review : ${reviews.content}" class="card mb-2">
+                <div th:if="${#authentication.name == review.user.email or #authorization.expression('hasAnyAuthority(''ADMIN'', ''EDITOR'')')}" class="mt-2 ms-3">
+                    <form method="POST" th:action="@{/movie/{movieId}/review/{reviewId}(movieId=${movie.id},reviewId=${review.id})}">
+                        <input th:value="${review.getUser().getEmail()}" name="email" type="hidden">
+                        <button type="submit" class="btn bg-danger text-light">Smazat</button>
+                    </form>
+                </div>
                 <div class="card-body">
                     <p class="content" th:text="${review.content}"></p>
                     <div class="d-flex justify-content-between">
